<resources>
    <string name="app_name">MM32 BLE Scanner</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">MindMotion</string>
    <string name="nav_header_subtitle">www.mindmotion.com.cn</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="tab1_title">Devices List</string>
    <string name="tab2_title">Device details</string>

    <string name="action_settings">Settings</string>
    <string name="action_scan">Scan</string>
    <string name="action_stop">Stop</string>
    <string name="action_scanner">Scanner</string>
    <string name="action_connecting">Connecting...</string>
    <string name="action_fail">Connecting failed!</string>
    <string name="action_disconnect">Disconnect</string>
    <string name="action_disconnected">Disconnected</string>

    <string name="menu_scanner">Scanner</string>
    <string name="menu_definitions">Definitions</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <string name="device_rssi">RSSI:</string>
    <string name="device_connect">Connect</string>
    <string name="device_connected">Connected</string>
    <string name="device_disconnect">Disconnect</string>

    <string name="detail_service">Service: </string>
    <string name="detail_uuid">UUID: </string>
    <string name="detail_properties">Properties: </string>
    <string name="detail_value">Value: </string>

    <string name="primary_service">Primary Service</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="please_open_blue">Please turn on Bluetooth</string>
    <string name="title_activity_mmnj__led">MMNJ_LED</string>
</resources>
