<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_scan_icon"
        android:orderInCategory="97"
        android:title=""
        app:showAsAction="always" />
    <item
        android:id="@+id/action_scan"
        android:orderInCategory="98"
        android:title="@string/action_scan"
        app:showAsAction="ifRoom|withText" />
    <item
        android:id="@+id/action_stop"
        android:orderInCategory="99"
        android:title="@string/action_stop"
        app:showAsAction="ifRoom|withText" />
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
</menu>
