<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="50dp">

    <TextView
        android:id="@+id/detail_char_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:text="aaaaaaaaaaaaa"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/detail_char_uuid_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:text="@string/detail_uuid"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/detail_char_name" />

    <TextView
        android:id="@+id/detail_char_uuid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="aaaaaaaa"
        android:textSize="12sp"
        app:layout_constraintLeft_toRightOf="@id/detail_char_uuid_text"
        app:layout_constraintStart_toEndOf="@+id/detail_char_uuid_text"
        app:layout_constraintTop_toBottomOf="@+id/detail_char_name" />

    <TextView
        android:id="@+id/detail_char_properties_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:text="@string/detail_properties"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/detail_char_uuid_text" />

    <TextView
        android:id="@+id/detail_char_properties"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="aaaaa"
        android:textSize="12sp"
        app:layout_constraintStart_toEndOf="@+id/detail_char_properties_text"
        app:layout_constraintTop_toBottomOf="@+id/detail_char_uuid" />

    <TextView
        android:id="@+id/detail_char_value_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:text="@string/detail_value"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/detail_char_properties_text" />

    <TextView
        android:id="@+id/detail_char_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text=""
        android:textSize="12sp"
        app:layout_constraintStart_toEndOf="@+id/detail_char_value_text"
        app:layout_constraintTop_toBottomOf="@+id/detail_char_properties" />

</android.support.constraint.ConstraintLayout>
